tests/fixtures/valid/simple.py
# Simple variable declaration and assignment
x: int = 42
y: int = x + 10
