tests/fixtures/invalid/int_sub_none.py
# Cannot subtract Int and None
x: int = 1 - None
